Initial draft at showing DM conversations

--- a/app/views/direct_message/index.html.erb
+++ b/app/views/direct_message/index.html.erb
@@ -1,3 +1,5 @@
 <section>
-  <div>Show the list of DM conversations</div>
+  <% @senders.each do |name, id| %>
+    <div><a href="/direct-messages/<%= id %>"><%= name %></a></div>
+  <% end %>
 </section>
