--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,9 @@
   <h1>Simple application to view your DM history</h1>
 
 <!-- TODO: check whether the user has granted permissions already. -->
-<div>Twitter does not have fine-grained permissions to only allow reading of DMs, so you'll just have to trust the code.</div>
+  <div>Twitter does not have fine-grained permissions to only allow reading of DMs, so you'll just have to trust the code.</div>
+
+  <div>
+    <a href="/sessions/new">Login to Twitter</a>
+  </div>
+</section>
